--- a/index.html
+++ b/index.html
@@ -516,9 +516,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- Footer -->
 							<section id="footer">
 								<ul class="icons">
-									<li><a href="https://discordapp.com/users/1211" class="icon brands fa-discord"><span class="label">Facebook</span></a></li>
+									<li><a href="https://discordapp.com/users/1211" class="icon brands fa-discord"><span class="label">discord</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://www.linkedin.com/in/bhumika-arora-ba13591b5/" class="icon brands fa-linkedin"><span class="label">RSS</span></a></li>
+									<li><a href="https://www.linkedin.com/in/bhumika-arora-ba13591b5/" class="icon brands fa-linkedin"><span class="label">linkedIn</span></a></li>
 									<li><a href="mailto:bhumika.arora@mail.mcgill.ca" class="icon brands fa-github"><span class="label">Email</span></a></li>
 								</ul>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a></p>
