--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ b<!DOCTYPE HTML>
 										<a class="author"><span class="name">My Projects</span><img src="images/original.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a class="image featured"><img src="images/care_bot.png" alt="" /></a>
+								<a class="image featured"><img src="images/Self Care_ Heck Yeah!.png" alt="" /></a>
 								<p>This is a discord bot called <a href="https://devpost.com/software/care-bot-adyjie">CareBot</a>. It was created by collaborative efforts of me and my team using python, discord.py and ultime robot. CareBot is an interactve bot with various commands that can help the user indulge in methods of self-care. Discord is a platform where a lot of interaction takes place and thus CareBot can be an efficient way to keep a track of reminders and self-care by using user-friendly commands!</p>
 								
 							</article>
